--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Source</title>
+    <title>Vias</title>
     <!-- import favicon -->
     <link rel="icon" type="image/x-icon" />
     <!-- meta -->
@@ -13,6 +13,12 @@
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
     <!-- meta -->
+
+    <!-- font -->
+    <link rel="stylesheet" href="./assets/fonts/MabryPro/stylesheet.css">
+    <link rel="stylesheet" href="./assets/fonts/SuperDisplay/stylesheet.css">
+    <!-- end font -->
+      
     <link rel="stylesheet" href="./assets/libs/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/libs/splitting.min.css" />
     <link rel="stylesheet" href="./assets/libs/lenis.css" />
@@ -26,7 +32,260 @@
     <!-- layout -->
     <header></header>
     <main>
-      <h1>helo</h1>
+      <section class="hero">
+        <div class="hero__container">
+          <div class="hero__content">
+            <h1 class="hero__title font-heading">Vietnam's first private island for the elite <span>Exclusive Buyout</span> experience</p>
+          </div>
+          <div class="hero__image">
+            <img src="./assets/images/banner.png" alt="Hero Image" />
+          </div>
+        </div>
+      </section>
+      <div class="spacing-80"></div>
+      <section class="section-desc">
+        <div class="container-fluid p-0">
+          <div class="row g-0 justify-content-center">
+            <div class="col-lg-8">
+              <h2 class="title">“A private island where you encounter only those you wish to see...”</h2>
+              <div class="desc">Van Phong Bay – "The Sleeping Princess" of the seas, one of the world's most beautiful bays with its tropical climate, pristine beauty and poetic charm. Distinguished by fine sandy beaches, gentle waves, crystal-clear turquoise waters, and year-round warm sunshine.</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-120"></div>
+      <section class="section-image">
+        <div class="container-fluid p-0">
+          <div class="image-wrapper">
+            <img src="./assets/images/image-1.jpg" alt="">
+          </div>
+        </div>
+      </section>
+      <div class="spacing-80"></div>
+      <section class="section-desc">
+        <div class="container-fluid p-0">
+          <div class="row g-0 justify-content-center">
+            <div class="col-lg-8">
+              <div class="desc">Majestic mountainous landscape. The sea water swimming pool offers exceptional good health. A place dedicated to your wellness and spiritual rejuvenation.</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-120"></div>
+      <section class="section-facilities">
+        <div class="container-fluid facilities_wrapper">
+          <div class="section-title">
+            <span class="tag text-uppercase d-block">Facilities</span>
+            <h2 class="title">Exclusive packages crafted for your unique events</h2>
+          </div>
+          <ul class="row list-item">
+            <li class="item col-lg-3 col-md-6">
+              <div class="item-wrapper">
+                <div class="item-text">
+                  State-of-the-art grand conference pavilion
+                </div>
+                <div class="item-image">
+                  <img src="./assets/images/image-box-1.png" alt="">
+                </div>
+              </div>
+            </li>
+            <li class="item col-lg-3 col-md-6">
+              <div class="item-wrapper">
+                <div class="item-text">
+                  Seawater swimming pool and gym
+                </div>
+                <div class="item-image">
+                  <img src="./assets/images/image-box-1.png" alt="">
+                </div>
+              </div>
+            </li>
+            <li class="item col-lg-3 col-md-6">
+              <div class="item-wrapper">
+                <div class="item-text">
+                  Private beach enclave for curated sporting and leisure pursuits
+                </div>
+                <div class="item-image">
+                  <img src="./assets/images/image-box-1.png" alt="">
+                </div>
+              </div>
+            </li>
+            <li class="item col-lg-3 col-md-6">
+              <div class="item-wrapper">
+                <div class="item-text">
+                  Gourmet tropical restaurant and exclusive lounge bar
+                </div>
+                <div class="item-image">
+                  <img src="./assets/images/image-box-1.png" alt="">
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-discover">
+        <div class="container-fluid discover-wrapper">
+          <div class="section-title">
+            <h2 class="title">Craft a bespoke private island journey uniquely yours with VIAS Resort Van Phong Peninsula</h2>
+          </div>
+          <div class="swiper swiper-discover">
+            <ul class="list-item swiper-wrapper">
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+              <li class="item swiper-slide">
+                <div class="item-wrapper">
+                  <div class="item-image">
+                    <img src="./assets/images/banner.png" alt="">
+                  </div>
+                  <div class="item-text">
+                    Flexible stay options perfectly matching your travel plans
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <div class="swiper-button-next">
+              <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 1C1.69999 2.86665 4.07998 6.59996 8 6.59996" stroke="white"/>
+              <path d="M1.00006 12.2001C1.70005 10.3334 4.08004 6.6001 8 6.6001" stroke="white"/>
+              </svg>
+            </div>
+            <div class="swiper-button-prev">
+              <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 1C6.30001 2.86665 3.92002 6.59996 0 6.59996" stroke="white"/>
+              <path d="M6.99994 12.2001C6.29995 10.3334 3.91996 6.6001 0 6.6001" stroke="white"/>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-80"></div>
+      <section class="section-logo">
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="section-title">
+                <h2 class="title">Our customer</h2>
+              </div>
+              <ul class="list-item">
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-120"></div>
+      <section class="section-logo">
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="section-title">
+                <h2 class="title">Our customer</h2>
+              </div>
+              <ul class="list-item">
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+                <li class="item">
+                  <img src="./assets/images/logo-branding.png" alt="">
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-120"></div>
+      <section class="section-services"></section>
+      <div class="spacing-120"></div>
     </main>
     <footer></footer>
     <!-- end layout -->
