--- a/index.html
+++ b/index.html
@@ -30,7 +30,34 @@
   </head>
   <body>
     <!-- layout -->
-    <header></header>
+    <header class="header">
+      <div class="container-fluid p-0">
+        <div class="header-wrapper">
+          <div class="header-menu"></div>
+          <a href="./index.html" class="header-logo d-block">
+            <img src="./assets/images/logo-footer.svg" alt="">
+          </a>
+          <div class="header-language dropdown-custom">
+            <div class="language__head dropdown-custom__btn">
+              <div class="ic">          
+                <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 0.5C2.86665 1.19999 6.59996 3.57998 6.59996 7.5" stroke="white"/>
+                <path d="M12.1996 0.500059C10.3329 1.20005 6.59961 3.58004 6.59961 7.5" stroke="white"/>
+                </svg> 
+              </div>
+              <div class="value-select color-white dropdown-custom__text">
+                <span>English</span>
+              </div>
+            </div>
+            <div class="language__body dropdown-custom__menu">
+              <a href="#" class="dropdown-custom__item language__item">
+                <span>Tiếng Việt</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="hero">
         <div class="hero__container">
@@ -47,8 +74,8 @@
         <div class="container-fluid p-0">
           <div class="row g-0 justify-content-center">
             <div class="col-lg-8">
-              <h2 class="title">“A private island where you encounter only those you wish to see...”</h2>
-              <div class="desc">Van Phong Bay – "The Sleeping Princess" of the seas, one of the world's most beautiful bays with its tropical climate, pristine beauty and poetic charm. Distinguished by fine sandy beaches, gentle waves, crystal-clear turquoise waters, and year-round warm sunshine.</div>
+              <h2 class="title data-fade-in">“A private island where you encounter only those you wish to see...”</h2>
+              <div class="desc data-fade-in">Van Phong Bay – "The Sleeping Princess" of the seas, one of the world's most beautiful bays with its tropical climate, pristine beauty and poetic charm. Distinguished by fine sandy beaches, gentle waves, crystal-clear turquoise waters, and year-round warm sunshine.</div>
             </div>
           </div>
         </div>
@@ -66,13 +93,13 @@
         <div class="container-fluid p-0">
           <div class="row g-0 justify-content-center">
             <div class="col-lg-8">
-              <div class="desc">Majestic mountainous landscape. The sea water swimming pool offers exceptional good health. A place dedicated to your wellness and spiritual rejuvenation.</div>
+              <div class="desc data-fade-in">Majestic mountainous landscape. The sea water swimming pool offers exceptional good health. A place dedicated to your wellness and spiritual rejuvenation.</div>
             </div>
           </div>
         </div>
       </section>
       <div class="spacing-80"></div>
-      <section class="section-intro">
+      <section class="section-intro data-fade-in">
         <div class="container-fluid intro-wrapper">
           <div class="row g-0">
             <div class="col-lg-7 intro-image">
@@ -116,7 +143,7 @@
         </div>
       </section>
       <div class="spacing-80"></div>
-      <section class="section-intro">
+      <section class="section-intro data-fade-in">
         <div class="container-fluid intro-wrapper img-right">
           <div class="row g-0 flex-row-reverse">
             <div class="col-lg-7 intro-image">
@@ -162,11 +189,11 @@
       <div class="spacing-80"></div>
       <section class="section-facilities">
         <div class="container-fluid facilities_wrapper">
-          <div class="section-title">
+          <div class="section-title data-fade-in">
             <span class="tag text-uppercase d-block">Facilities</span>
             <h2 class="title">Exclusive packages crafted for your unique events</h2>
           </div>
-          <ul class="row list-item">
+          <ul class="row list-item data-fade-in">
             <li class="item col-lg-3 col-md-6">
               <div class="item-wrapper">
                 <div class="item-text">
@@ -212,10 +239,10 @@
       </section>
       <section class="section-discover">
         <div class="container-fluid discover-wrapper">
-          <div class="section-title">
+          <div class="section-title data-fade-in">
             <h2 class="title">Craft a bespoke private island journey uniquely yours with VIAS Resort Van Phong Peninsula</h2>
           </div>
-          <div class="swiper swiper-discover">
+          <div class="swiper swiper-discover data-fade-in">
             <ul class="list-item swiper-wrapper">
               <li class="item swiper-slide">
                 <div class="item-wrapper">
@@ -318,10 +345,10 @@
         <div class="container-fluid logo-wrapper">
           <div class="row justify-content-center">
             <div class="col-lg-8">
-              <div class="section-title">
+              <div class="section-title data-fade-in">
                 <h2 class="title">Our customer</h2>
               </div>
-              <ul class="list-item">
+              <ul class="list-item data-fade-in">
                 <li class="item">
                   <img src="./assets/images/logo-branding.png" alt="">
                 </li>
@@ -347,10 +374,10 @@
         <div class="container-fluid logo-wrapper">
           <div class="row justify-content-center">
             <div class="col-lg-8">
-              <div class="section-title">
+              <div class="section-title data-fade-in">
                 <h2 class="title">Our customer</h2>
               </div>
-              <ul class="list-item">
+              <ul class="list-item data-fade-in">
                 <li class="item">
                   <img src="./assets/images/logo-branding.png" alt="">
                 </li>
@@ -374,10 +401,10 @@
       <div class="spacing-120"></div>
       <section class="section-services">
         <div class="container-fluid services_wrapper">
-          <div class="section-title">
+          <div class="section-title data-fade-in">
             <h2 class="title">Our bespoke rental experiences are crafted to your exacting requirements.</h2>
           </div>
-          <ul class="row list-item">
+          <ul class="row list-item data-fade-in">
             <li class="item col-lg-4 col-md-12">
               <div class="item-wrapper">
                 <div class="item-image">
