--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
         </div>
       </section>
       <div class="spacing-80"></div>
-      <section class="section-intro data-fade-in">
+      <section class="section-intro">
         <div class="container-fluid intro-wrapper">
           <div class="row g-0">
             <div class="col-lg-7 intro-image">
-              <h4>A Castle crafted for the VVIP</h4>
-              <div class="img-wrapper">
-                <img src="./assets/images/banner.png" alt="">
+              <h4 class="data-fade-in">A Castle crafted for the VVIP</h4>
+              <div class="img-wrapper overflow-hidden">
+                <img src="./assets/images/banner.png" alt="" class="data-zoom-in">
               </div>
             </div>
             <div class="col-lg-5 intro-content">
               <div class="box">
-                <h3 class="title">Presidential Château</h3>
-                <ul class="list-item">
+                <h3 class="title data-fade-in">Presidential Château</h3>
+                <ul class="list-item data-fade-in">
                   <li>                    
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.75 4.5H19.5V8.25" stroke="#543929" stroke-linecap="round" stroke-linejoin="round"/>
@@ -133,7 +133,7 @@
                     25 Staffs
                   </li>
                 </ul>
-                <div class="desc">
+                <div class="desc data-fade-in">
                   <p>Enjoy absolute freedom, complete control over your space and time on the island with activities for relaxation of body and mind. Experience a luxurious stay with panoramic views of the coastal natural landscape over Van Phong Bay.</p>
                   <p>“Affirming your personal mark and pride in every moment on the island”</p>
                 </div>
@@ -147,15 +147,15 @@
         <div class="container-fluid intro-wrapper img-right">
           <div class="row g-0 flex-row-reverse">
             <div class="col-lg-7 intro-image">
-              <h4>Elevated experiences for prestigious events & high level corporate meeting</h4>
-              <div class="img-wrapper">
-                <img src="./assets/images/banner.png" alt="">
+              <h4 class="data-fade-in">Elevated experiences for prestigious events & high level corporate meeting</h4>
+              <div class="img-wrapper overflow-hidden">
+                <img src="./assets/images/banner.png" class="data-zoom-in" alt="">
               </div>
             </div>
             <div class="col-lg-5 intro-content">
               <div class="box">
-                <h3 class="title">Presidential Château</h3>
-                <ul class="list-item">
+                <h3 class="title data-fade-in">Presidential Château</h3>
+                <ul class="list-item data-fade-in">
                   <li>                    
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.75 4.5H19.5V8.25" stroke="#543929" stroke-linecap="round" stroke-linejoin="round"/>
@@ -177,7 +177,7 @@
                     25 Staffs
                   </li>
                 </ul>
-                <div class="desc">
+                <div class="desc data-fade-in">
                   <p>Enjoy absolute freedom, complete control over your space and time on the island with activities for relaxation of body and mind. Experience a luxurious stay with panoramic views of the coastal natural landscape over Van Phong Bay.</p>
                   <p>“Affirming your personal mark and pride in every moment on the island”</p>
                 </div>
@@ -199,8 +199,8 @@
                 <div class="item-text">
                   State-of-the-art grand conference pavilion
                 </div>
-                <div class="item-image">
-                  <img src="./assets/images/image-box-1.png" alt="">
+                <div class="item-image overflow-hidden">
+                  <img src="./assets/images/image-box-1.png" class="data-zoom-in" alt="">
                 </div>
               </div>
             </li>
@@ -209,8 +209,8 @@
                 <div class="item-text">
                   Seawater swimming pool and gym
                 </div>
-                <div class="item-image">
-                  <img src="./assets/images/image-box-1.png" alt="">
+                <div class="item-image overflow-hidden">
+                  <img src="./assets/images/image-box-1.png" class="data-zoom-in" alt="">
                 </div>
               </div>
             </li>
@@ -219,8 +219,8 @@
                 <div class="item-text">
                   Private beach enclave for curated sporting and leisure pursuits
                 </div>
-                <div class="item-image">
-                  <img src="./assets/images/image-box-1.png" alt="">
+                <div class="item-image overflow-hidden">
+                  <img src="./assets/images/image-box-1.png" class="data-zoom-in" alt="">
                 </div>
               </div>
             </li>
@@ -229,8 +229,8 @@
                 <div class="item-text">
                   Gourmet tropical restaurant and exclusive lounge bar
                 </div>
-                <div class="item-image">
-                  <img src="./assets/images/image-box-1.png" alt="">
+                <div class="item-image overflow-hidden">
+                  <img src="./assets/images/image-box-1.png" class="data-zoom-in" alt="">
                 </div>
               </div>
             </li>
@@ -246,8 +246,8 @@
             <ul class="list-item swiper-wrapper">
               <li class="item swiper-slide">
                 <div class="item-wrapper">
-                  <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="">
+                  <div class="item-image overflow-hidden">
+                    <img src="./assets/images/banner.png" class="data-zoom-in" alt="">
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
@@ -256,8 +256,8 @@
               </li>
               <li class="item swiper-slide">
                 <div class="item-wrapper">
-                  <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="">
+                  <div class="item-image overflow-hidden">
+                    <img src="./assets/images/banner.png" class="data-zoom-in" alt="">
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
@@ -407,8 +407,8 @@
           <ul class="row list-item data-fade-in">
             <li class="item col-lg-4 col-md-12">
               <div class="item-wrapper">
-                <div class="item-image">
-                  <img src="./assets/images/image-box-1.png" alt="">
+                <div class="item-image overflow-hidden">
+                  <img src="./assets/images/image-box-1.png" class="data-zoom-in" alt="">
                 </div>
                 <div class="item-text">
                   <div class="tag text-uppercase">option 1</div>
@@ -419,8 +419,8 @@
             </li>
             <li class="item col-lg-4 col-md-12">
               <div class="item-wrapper">
-                <div class="item-image">
-                  <img src="./assets/images/image-box-1.png" alt="">
+                <div class="item-image overflow-hidden">
+                  <img src="./assets/images/image-box-1.png" class="data-zoom-in" alt="">
                 </div>
                 <div class="item-text">
                   <div class="tag text-uppercase">option 1</div>
@@ -431,8 +431,8 @@
             </li>
             <li class="item col-lg-4 col-md-12">
               <div class="item-wrapper">
-                <div class="item-image">
-                  <img src="./assets/images/image-box-1.png" alt="">
+                <div class="item-image overflow-hidden">
+                  <img src="./assets/images/image-box-1.png" class="data-zoom-in" alt="">
                 </div>
                 <div class="item-text">
                   <div class="tag text-uppercase">option 1</div>
@@ -518,7 +518,7 @@
           </div>
         </div>
         <div class="footer-pattern">
-          <img src="./assets/images/background-footer.svg" alt="">
+          <img src="./assets/images/background-footer.svg" class="data-zoom-in" alt="">
         </div>
       </div>
       <div class="container-fluid p-0 footer-ovl">
