update function footer

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
           </div>
         </div>
         <div class="footer-pattern">
-          <img src="./assets/images/background-footer.svg" class="data-zoom-in" alt="">
+          <img src="./assets/images/background-footer.svg" class="data-zoom-in-footer" alt="">
         </div>
       </div>
       <div class="container-fluid p-0 footer-ovl">
