--- a/index.html
+++ b/index.html
@@ -211,10 +211,8 @@
           </div>
         </div>
         <div class="hero__content">
-          <p>
-            Viet Nam’s first private island for the elite
-            <span>Exclusive Buyout</span> experience
-          </p>
+          <p>Viet Nam’s first private island for the elite</p>
+          <p><span>Exclusive Buyout</span> experience</p>
         </div>
         <div class="swiper-arrows">
           <div class="swiper-button-prev">
@@ -305,12 +303,8 @@
           <div class="row g-0">
             <div class="col-lg-7 intro-image">
               <h4 class="data-fade-in">A Castle crafted for the VVIP</h4>
-              <div class="img-wrapper overflow-hidden parallax-trigger">
-                <img
-                  src="./assets/images/banner.png"
-                  alt=""
-                  class="data-zoom-in"
-                />
+              <div class="img-wrapper parallax-trigger overflow-hidden">
+                <img src="./assets/images/banner.png" alt="" />
               </div>
             </div>
             <div class="col-lg-5 intro-content">
@@ -425,12 +419,8 @@
                 Elevated experiences for prestigious events & high level
                 corporate meeting
               </h4>
-              <div class="img-wrapper overflow-hidden">
-                <img
-                  src="./assets/images/banner.png"
-                  class="data-zoom-in"
-                  alt=""
-                />
+              <div class="img-wrapper parallax-trigger overflow-hidden">
+                <img src="./assets/images/banner.png" alt="" />
               </div>
             </div>
             <div class="col-lg-5 intro-content">
@@ -874,7 +864,7 @@
       <div class="spacing-120"></div>
       <div class="spacing-80"></div>
     </main>
-    <div class="cta-mess hide">
+    <div class="cta-mess">
       <a href="#">
         <svg
           width="20"
