--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
               </div>
             </div>
             <div class="footer-bottom__right col-lg-3">
-              <ul class="footer-social">
+              <ul class="footer-social d-none d-md-flex">
                 <li>
                   <a href="#" class="facebook">
                     <svg
@@ -1045,7 +1045,7 @@
               </div>
             </div>
             <div class="footer-bottom__right col-lg-3">
-              <ul class="footer-social">
+              <ul class="footer-social d-none d-md-flex">
                 <li>
                   <a href="#" class="facebook">
                     <svg
