--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,11 @@
           </div>
         </div>
         <div class="footer-pattern">
-          <img src="./assets/images/background-footer.svg" alt="" />
+          <img
+            src="./assets/images/background-footer.svg"
+            class="data-zoom-in-footer"
+            alt=""
+          />
         </div>
       </div>
     </footer>
