--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             </h2>
           </div>
           <ul class="row list-item data-fade-in">
-            <li class="item col-lg-3 col-md-6">
+            <li class="item col-lg-3 col-md-6 col-12">
               <div class="item-wrapper">
                 <div class="item-text">
                   State-of-the-art grand conference pavilion
@@ -550,7 +550,7 @@
                 </div>
               </div>
             </li>
-            <li class="item col-lg-3 col-md-6">
+            <li class="item col-lg-3 col-md-6 col-12">
               <div class="item-wrapper">
                 <div class="item-text">Seawater swimming pool and gym</div>
                 <div class="item-image overflow-hidden">
@@ -562,7 +562,7 @@
                 </div>
               </div>
             </li>
-            <li class="item col-lg-3 col-md-6">
+            <li class="item col-lg-3 col-md-6 col-12">
               <div class="item-wrapper">
                 <div class="item-text">
                   Private beach enclave for curated sporting and leisure
@@ -577,7 +577,7 @@
                 </div>
               </div>
             </li>
-            <li class="item col-lg-3 col-md-6">
+            <li class="item col-lg-3 col-md-6 col-12">
               <div class="item-wrapper">
                 <div class="item-text">
                   Gourmet tropical restaurant and exclusive lounge bar
@@ -806,7 +806,7 @@
             </h2>
           </div>
           <ul class="row list-item data-fade-in">
-            <li class="item col-lg-4 col-md-12">
+            <li class="item col-lg-4 col-md-6 col-12">
               <div class="item-wrapper">
                 <div class="item-image overflow-hidden">
                   <img
@@ -824,7 +824,7 @@
                 </div>
               </div>
             </li>
-            <li class="item col-lg-4 col-md-12">
+            <li class="item col-lg-4 col-md-6 col-12">
               <div class="item-wrapper">
                 <div class="item-image overflow-hidden">
                   <img
@@ -842,7 +842,7 @@
                 </div>
               </div>
             </li>
-            <li class="item col-lg-4 col-md-12">
+            <li class="item col-lg-4 col-md-6 col-12">
               <div class="item-wrapper">
                 <div class="item-image overflow-hidden">
                   <img
@@ -900,7 +900,7 @@
           <a href="#" class="footer-logo d-block">
             <img src="./assets/images/logo-footer.svg" alt="" />
           </a>
-          <ul class="footer-social d-flex d-md-none">
+          <ul class="footer-social d-md-flex d-lg-none">
             <li>
               <a href="#" class="facebook">
                 <svg
@@ -1010,7 +1010,7 @@
               </div>
             </div>
             <div class="footer-bottom__right col-lg-3">
-              <ul class="footer-social d-none d-md-flex">
+              <ul class="footer-social d-none d-lg-flex">
                 <li>
                   <a href="#" class="facebook">
                     <svg
@@ -1117,7 +1117,7 @@
           <a href="#" class="footer-logo d-block">
             <img src="./assets/images/logo-footer.svg" alt="" />
           </a>
-          <ul class="footer-social d-flex d-md-none">
+          <ul class="footer-social d-md-flex d-lg-none">
             <li>
               <a href="#" class="facebook">
                 <svg
@@ -1223,7 +1223,7 @@
               </div>
             </div>
             <div class="footer-bottom__right col-lg-3">
-              <ul class="footer-social d-none d-md-flex">
+              <ul class="footer-social d-none d-lg-flex">
                 <li>
                   <a href="#" class="facebook">
                     <svg
