--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
             </div>
           </div>
         </div>
-        <div class="hero__content">
-          <p>Viet Nam’s first private island for the elite</p>
-          <p><span>Exclusive Buyout</span> experience</p>
+        <div class="hero__content" data-splitting>
+          <h2>Viet Nam’s first private island for the elite</h2>
+          <h2><em>Exclusive Buyout</em> experience</h2>
         </div>
         <div class="swiper-arrows">
           <div class="swiper-button-prev">
