--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="container-fluid p-0">
           <div class="row g-0 justify-content-center">
             <div class="col-lg-8">
-              <h2 class="title data-fade-in">
+              <h2 class="title data-fade-in" data-disable-mobile>
                 “A private island where you encounter only those you wish to
                 see...”
               </h2>
@@ -816,7 +816,9 @@
                   />
                 </div>
                 <div class="item-text">
-                  <div class="tag text-uppercase">option 1</div>
+                  <div class="tag text-uppercase" data-offset="90%">
+                    option 1
+                  </div>
                   <div class="title">
                     Private lease of the Presidential Chateau
                   </div>
