--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </header>
     <main>
-      <section class="hero position-relative text-white vh-100">
+      <section class="hero position-relative text-white">
         <div
           class="swiper hero-slider position-absolute top-0 start-0 w-100 h-100"
           data-loop="true"
