update section map

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           </div>
         </div>
         <div class="hero__content" data-splitting>
-          <h2>Viet Nam’s first private island for the elite</h2>
+          <h2>Viet Nam’s first private island for the Elites</h2>
           <h2><em>Exclusive Buyout</em> experience</h2>
         </div>
         <div class="swiper-arrows">
@@ -526,7 +526,26 @@
           </div>
         </div>
       </section>
-      <div class="spacing-80 spacing-mb-24"></div>
+      <div class="spacing-140"></div>
+      <section class="section-map">
+        <div class="container-fluid section-map__wrapper">
+          <div class="section-title data-fade-in">
+            <h2 class="title">Where we are</h2>
+          </div>
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3893.2449076477706!2d109.39922827571966!3d12.631932022232938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317005b50cecae13%3A0xe5d892703a0773c9!2sRed%20Ruby%20Peninsula!5e0!3m2!1sen!2s!4v1746761658135!5m2!1sen!2s"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-140 spacing-mb-24"></div>
       <section class="section-facilities">
         <div class="container-fluid facilities_wrapper">
           <div class="section-title data-fade-in">
